# bow

./: .gitignore  BUILD.md  README.md  pyproject.toml  todo.md
src/bow/: analyzer.py  parser.py  rule.py  rules_applier.py  rules_parser.py  runner.py
src/bow/tests/: test_parser.py
src/bow/tests/test_files/multiple_accounts_complete_overlap/: 2001-11-30-2003-01-03 konto1.csv  2001-11-30-2003-01-03 konto2.csv
src/bow/tests/test_files/unique_account/: 2001-11-30-2003-01-03.csv  2002-12-23-2003-08-25.csv  2003-03-04-2003-06-04.csv
